# dangit

./: .gitignore  README.md  com.remcokranenburg.Dangit.json  meson.build
data/: com.remcokranenburg.Dangit.desktop.in  com.remcokranenburg.Dangit.gschema.xml  com.remcokranenburg.Dangit.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: dangit.gresource.xml  dangit.in  files.py  main.py  meson.build  window.py  window.ui
